[package]
name = "ubevid_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-skia = "0.11"
taffy = "0.3"
fontdue = "0.7" 
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }