[package]
name = "amethyst_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-skia = { version = "0.11", features = ["simd"] }
taffy = "0.3"
fontdue = "0.7" 
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
svgtypes = "0.12"
wgpu = "0.19" 